--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.10.3",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.59.15",
     "@tauri-apps/api": "^2.1.1",
     "@tauri-apps/plugin-shell": "^2",
@@ -20,8 +21,10 @@
     "framer-motion": "^11.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "yup": "^1.5.0",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
